--- a/src/styles/desktop/Footer.scss
+++ b/src/styles/desktop/Footer.scss
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: auto;
 }
 
 .contact-info-container {
